--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
     </footer>
     <section class="overlay page__overlay">
-      <form class="popup__container">
+      <form class="popup popup__container">
         <h2 class="popup__heading">Редактировать профиль</h2>
         <fieldset class="popup__input-container">
           <!-- <label for="heading" class="form__label"></label> -->
