--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <!-- required -->
           <button type="submit" class="popup__submit">Сохранить</button>
         </fieldset>
-        <span class="popup popup_close"></span>
+        <span class="popup__button_close"></span>
       </form>
     </section>
   </div>
