--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
     </footer>
     <section class="overlay page__overlay">
-      <form class="popup popup__container">
+      <form class="popup">
         <h2 class="popup__heading">Редактировать профиль</h2>
         <fieldset class="popup__input-container">
           <!-- <label for="heading" class="form__label"></label> -->
@@ -91,7 +91,7 @@
           <!-- required -->
           <button type="submit" class="popup__submit">Сохранить</button>
         </fieldset>
-        <span class="popup__button_close"></span>
+        <span class="popup__button popup__button_close"></span>
       </form>
     </section>
   </div>
