--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       <a href="#" class="header__link" target="_blank">
         <img src="./images/header-logo.svg" alt="Логотип Mesto" class="header__logo" />
       </a>
-      <div class="header__line"></div>
     </header>
     <main class="content page__content">
       <section class="profile content__profile">
@@ -24,62 +23,60 @@
             <h1 class="profile__name">Жак-Ив Кусто</h1>
             <p class="profile__about">Исследователь океана</p>
           </div>
-          <button class="profile__button profile__button_edit"></button>
+          <button class="profile__button profile__button_edit" type="button"></button>
         </div>
-        <button class="profile__button profile__button_add"></button>
+        <button class="profile__button profile__button_add" type="button"></button>
       </section>
       <section class="elements content__elements">
         <div class="elements__item">
           <img src="./images/karachaevsk.jpg" alt="Фото Карачаевск" class="elements__image" />
           <div class="elements__flex">
-            <p class="elements__caption">Карачаевск</p>
-            <span class="elements__button-like"></span>
+            <h2 class="elements__caption">Карачаевск</h2>
+            <button class="elements__button-like" type="button"></button>
           </div>
         </div>
         <div class="elements__item">
           <img src="./images/elbrus.jpg" alt="Фото Гора Эльбрус" class="elements__image" />
           <div class="elements__flex">
-            <p class="elements__caption">Гора Эльбрус</p>
-            <span class="elements__button-like"></span>
+            <h2 class="elements__caption">Гора Эльбрус</h2>
+            <button class="elements__button-like" type="button"></button>
           </div>
         </div>
         <div class="elements__item">
           <img src="./images/dombai.jpg" alt="Фото Домбай" class="elements__image" />
           <div class="elements__flex">
-            <p class="elements__caption">Домбай</p>
-            <span class="elements__button-like"></span>
+            <h2 class="elements__caption">Домбай</h2>
+            <button class="elements__button-like" type="button"></button>
           </div>
         </div>
         <div class="elements__item">
           <img src="./images/dombai.jpg" alt="Фото Домбай" class="elements__image" />
           <div class="elements__flex">
-            <p class="elements__caption">Домбай</p>
-            <span class="elements__button-like"></span>
+            <h2 class="elements__caption">Домбай</h2>
+            <button class="elements__button-like" type="button"></button>
           </div>
         </div>
         <div class="elements__item">
           <img src="./images/karachaevsk.jpg" alt="Фото Карачаевск" class="elements__image" />
           <div class="elements__flex">
-            <p class="elements__caption">Карачаевск</p>
-            <span class="elements__button-like"></span>
+            <h2 class="elements__caption">Карачаевск</h2>
+            <button class="elements__button-like" type="button"></button>
           </div>
         </div>
         <div class="elements__item">
           <img src="./images/elbrus.jpg" alt="Фото Гора Эльбрус" class="elements__image" />
           <div class="elements__flex">
-            <p class="elements__caption">Гора Эльбрус</p>
-            <span class="elements__button-like"></span>
+            <h2 class="elements__caption">Гора Эльбрус</h2>
+            <button class="elements__button-like" type="button"></button>
           </div>
         </div>
       </section>
     </main>
     <footer class="footer page__footer">
-      <div class="footer__copyright">
-        <p>&copy; 2020 Mesto Russia</p>
-      </div>
+      <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
     <section class="overlay page__overlay">
-      <form class="popup">
+      <form class="popup" name="popup">
         <h2 class="popup__heading">Редактировать профиль</h2>
         <fieldset class="popup__input-container">
           <!-- <label for="heading" class="form__label"></label> -->
@@ -91,7 +88,7 @@
           <!-- required -->
           <button type="submit" class="popup__submit">Сохранить</button>
         </fieldset>
-        <span class="popup__button popup__button_close"></span>
+        <button class="popup__button popup__button_close" type="button"></button>
       </form>
     </section>
   </div>
