--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
       </form>
     </section>
     <section class="overlay page__overlay page__overlay_type_look">
-      <figure class="popup__box">
-        <img src="#" alt="" class="popup__image"/>
+      <figure class="popup_look">
+        <img src="#" alt="#" class="popup__image"/>
         <figcaption class="popup__caption"></figcaption>
         <button class="popup__button popup__button_close" type="button"></button>
       </figure>
     </section>
     <template class="template">
       <div class="elements__item">
-        <img src="#" alt="Фото Гора Эльбрус" class="elements__image" />
+        <img src="#" alt="#" class="elements__image" />
         <div class="elements__flex">
           <h2 class="elements__caption"></h2>
           <button class="elements__button-like" type="button"></button>
