--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
     <section class="overlay page__overlay page__overlay_type_edit">
-      <form class="popup popup_edit" name="popup">
+      <form class="popup popup_type_form popup_do_edit" name="popup">
         <h2 class="popup__heading">Редактировать профиль</h2>
         <fieldset class="popup__input-container">
           <!-- <label for="heading" class="form__label"></label> -->
@@ -50,7 +50,7 @@
       </form>
     </section>
     <section class="overlay page__overlay page__overlay_type_add">
-      <form class="popup popup_add" name="popup">
+      <form class="popup popup_type_form popup_do_add" name="popup">
         <h2 class="popup__heading">Новое место</h2>
         <fieldset class="popup__input-container">
           <input type="text" class="popup__item popup__item_el_caption" id="caption" name="caption" placeholder="Название"
@@ -63,7 +63,7 @@
       </form>
     </section>
     <section class="overlay page__overlay page__overlay_type_look">
-      <figure class="popup_look">
+      <figure class="popup popup_type_figure popup_do_look">
         <img src="#" alt="#" class="popup__image"/>
         <figcaption class="popup__caption"></figcaption>
         <button class="popup__button popup__button_close" type="button"></button>
