--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="page">
   <div class="page__container">
     <header class="header page__header">
-      <a href="#" class="header__link" target="_blank">
+      <a href="#" class="header__link" target="_blank" rel="noopener">
         <img src="./images/header-logo.svg" alt="Логотип Mesto" class="header__logo" />
       </a>
     </header>
@@ -23,9 +23,9 @@
             <h1 class="profile__name">Жак-Ив Кусто</h1>
             <p class="profile__about">Исследователь океана</p>
           </div>
-          <button class="profile__button profile__button_edit" type="button"></button>
+          <button class="profile__button profile__button_edit" type="button" aria-label="Редактировать"></button>
         </div>
-        <button class="profile__button profile__button_add" type="button"></button>
+        <button class="profile__button profile__button_add" type="button" aria-label="Добавить"></button>
       </section>
       <section class="elements content__elements">
       </section>
@@ -33,7 +33,7 @@
     <footer class="footer page__footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
-    <section class="overlay page__overlay page__overlay_type_edit">
+    <article class="overlay page__overlay page__overlay_type_edit">
       <form class="popup popup_type_form popup_do_edit" name="popup">
         <h2 class="popup__heading">Редактировать профиль</h2>
         <fieldset class="popup__input-container">
@@ -44,12 +44,12 @@
           <input type="text" class="popup__item popup__item_el_about" id="about" name="about"
             placeholder="Краткое описание" value="Исследователь океана" required>
           <!-- required -->
-          <button type="submit" class="popup__submit">Сохранить</button>
+          <button type="submit" class="popup__submit" aria-label="Сохранить">Сохранить</button>
         </fieldset>
-        <button class="popup__button popup__button_close" type="button"></button>
+        <button class="popup__button" type="button" aria-label="Закрыть"></button>
       </form>
-    </section>
-    <section class="overlay page__overlay page__overlay_type_add">
+    </article>
+    <article class="overlay page__overlay page__overlay_type_add">
       <form class="popup popup_type_form popup_do_add" name="popup">
         <h2 class="popup__heading">Новое место</h2>
         <fieldset class="popup__input-container">
@@ -57,29 +57,32 @@
             value="" required>
           <input type="text" class="popup__item popup__item_el_image" id="image" name="image"
             placeholder="Ссылка на картинку" value="" required>
-          <button type="submit" class="popup__submit">Создать</button>
+          <button type="submit" class="popup__submit" aria-label="Создать">Создать</button>
         </fieldset>
-        <button class="popup__button popup__button_close" type="button"></button>
+        <button class="popup__button" type="button" aria-label="Закрыть"></button>
       </form>
-    </section>
-    <section class="overlay page__overlay page__overlay_type_look">
-      <figure class="popup popup_type_figure popup_do_look">
-        <img src="#" alt="#" class="popup__image"/>
-        <figcaption class="popup__caption"></figcaption>
-        <button class="popup__button popup__button_close" type="button"></button>
-      </figure>
-    </section>
+    </article>
+    <article class="overlay page__overlay page__overlay_type_look">
+      <div class="popup popup_type_image popup_do_look">
+        <figure class="popup__figure">
+          <img src="#" alt="#" class="popup__image"/>
+          <figcaption class="popup__caption"></figcaption>
+        </figure>
+        <button class="popup__button" type="button" aria-label="Закрыть"></button>
+      </div>
+    </article>
     <template class="template">
       <div class="elements__item">
         <img src="#" alt="#" class="elements__image" />
-        <div class="elements__flex">
+        <div class="elements__box">
           <h2 class="elements__caption"></h2>
-          <button class="elements__button-like" type="button"></button>
+          <button class="elements__button-like" type="button" aria-label="Мне нравится"></button>
         </div>
-        <button class="elements__button-delete" type="button"></button>
+        <button class="elements__button-delete" type="button" aria-label="Удалить"></button>
       </div>
     </template> 
   </div>
+  <script src="./scripts/initial-cards.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 
