--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="about-input-error popup__input-error"></span>
           <button type="submit" class="popup__submit" aria-label="Сохранить">Сохранить</button>
         </fieldset>
-        <button class="popup__button" type="button" aria-label="Закрыть"></button>
+        <button class="popup__button popup__button_close" type="button" aria-label="Закрыть"></button>
       </form>
     </article>
     <article class="overlay page__overlay page__overlay_type_add">
@@ -60,7 +60,7 @@
           <span class="image-input-error popup__input-error"></span>
           <button type="submit" class="popup__submit" aria-label="Создать">Создать</button>
         </fieldset>
-        <button class="popup__button" type="button" aria-label="Закрыть"></button>
+        <button class="popup__button popup__button_close" type="button" aria-label="Закрыть"></button>
       </form>
     </article>
     <article class="overlay page__overlay page__overlay_type_look">
@@ -69,7 +69,7 @@
           <img src="#" alt="#" class="popup__image"/>
           <figcaption class="popup__caption"></figcaption>
         </figure>
-        <button class="popup__button" type="button" aria-label="Закрыть"></button>
+        <button class="popup__button popup__button_close" type="button" aria-label="Закрыть"></button>
       </div>
     </article>
     <template class="template">
