Add class Card and FormValidator

--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
       </div>
     </template> 
   </div>
-  <script src="./scripts/initial-cards.js"></script>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/data.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
 </body>
 
 </html>
