--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
     <article class="overlay page__overlay page__overlay_type_edit">
-      <form class="popup popup_type_form popup_do_edit" name="popup" novalidate>
+      <form class="popup popup_type_form popup_do_edit" name="form-edit" novalidate>
         <h2 class="popup__heading">Редактировать профиль</h2>
         <fieldset class="popup__input-container">
           <input type="text" class="popup__input popup__input_el_name" id="name-input" name="name" placeholder="Ваше имя"
@@ -49,7 +49,7 @@
       </form>
     </article>
     <article class="overlay page__overlay page__overlay_type_add">
-      <form class="popup popup_type_form popup_do_add" name="popup" novalidate>
+      <form class="popup popup_type_form popup_do_add" name="form-add" novalidate>
         <h2 class="popup__heading">Новое место</h2>
         <fieldset class="popup__input-container">
           <input type="text" class="popup__input popup__input_el_caption" id="caption-input" name="caption" placeholder="Название"
@@ -84,8 +84,6 @@
     </template> 
   </div>
   <script type="module" src="./scripts/index.js"></script>
-  <script type="module" src="./scripts/FormValidator.js"></script>
-  <script type="module" src="./scripts/Card.js"></script>
 </body>
 
 </html>
