--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css" />
 </head>
 
 <body class="page">
   <div class="page__container">
     <header class="header page__header">
       <a href="#" class="header__link" target="_blank" rel="noopener">
-        <img src="./images/header-logo.svg" alt="Логотип Mesto" class="header__logo" />
+        <img src="<%=require('./images/header-logo.svg')%>" alt="Логотип Mesto" class="header__logo" />
       </a>
     </header>
     <main class="content page__content">
       <section class="profile content__profile">
-        <img src="./images/avatar.jpg" alt="Аватар" class="profile__avatar" />
+        <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__avatar" />
         <div class="profile__info">
           <div class="profile__text">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -37,7 +36,7 @@
       <form class="popup popup_type_form popup_do_edit" name="form-edit" novalidate>
         <h2 class="popup__heading">Редактировать профиль</h2>
         <fieldset class="popup__input-container">
-          <input type="text" class="popup__input popup__input_el_name" id="name-input" name="name" placeholder="Ваше имя"
+          <input type="text" class="popup__input popup__input_el_name" id="name-input" name="myname" placeholder="Ваше имя"
             value="" minlength="2" maxlength="40" required>
           <span class="name-input-error popup__input-error"></span>
           <input type="text" class="popup__input popup__input_el_about" id="about-input" name="about"
@@ -52,10 +51,10 @@
       <form class="popup popup_type_form popup_do_add" name="form-add" novalidate>
         <h2 class="popup__heading">Новое место</h2>
         <fieldset class="popup__input-container">
-          <input type="text" class="popup__input popup__input_el_caption" id="caption-input" name="caption" placeholder="Название"
+          <input type="text" class="popup__input popup__input_el_caption" id="caption-input" name="name" placeholder="Название"
             value="" minlength="2" maxlength="30" required>
           <span class="caption-input-error popup__input-error">Вы пропустили это поле.</span>
-          <input type="url" class="popup__input popup__input_el_image" id="image-input" name="image"
+          <input type="url" class="popup__input popup__input_el_image" id="image-input" name="link"
             placeholder="Ссылка на картинку" value="" required>
           <span class="image-input-error popup__input-error"></span>
           <button type="submit" class="popup__submit" aria-label="Создать">Создать</button>
@@ -83,7 +82,6 @@
       </div>
     </template> 
   </div>
-  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
