--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
+  <link rel="stylesheet" href="./pages/index.css" />
 </head>
 
 <body class="page">
@@ -71,6 +72,27 @@
         <button class="popup__button popup__button_close" type="button" aria-label="Закрыть"></button>
       </div>
     </article>
+    <article class="overlay page__overlay page__overlay_type_delete">
+      <form class="popup popup_type_form popup_do_delete" name="form-delete" novalidate>
+        <h2 class="popup__heading">Вы уверены?</h2>
+        <fieldset class="popup__input-container">
+          <button type="submit" class="popup__submit" aria-label="Сохранить">Сохранить</button>
+        </fieldset>
+        <button class="popup__button popup__button_close" type="button" aria-label="Закрыть"></button>
+      </form>
+    </article>
+    <article class="overlay page__overlay page__overlay_type_avatar">
+      <form class="popup popup_type_form popup_do_avatar" name="form-avatar" novalidate>
+        <h2 class="popup__heading">Обновить аватар</h2>
+        <fieldset class="popup__input-container">
+          <input type="url" class="popup__input popup__input_el_image" id="image-input" name="link"
+            placeholder="Ссылка на картинку" value="" required>
+          <span class="image-input-error popup__input-error"></span>
+          <button type="submit" class="popup__submit" aria-label="Создать">Создать</button>
+        </fieldset>
+        <button class="popup__button popup__button_close" type="button" aria-label="Закрыть"></button>
+      </form>
+    </article>
     <template class="template">
       <div class="elements__item">
         <img src="#" alt="#" class="elements__image" />
@@ -82,6 +104,7 @@
       </div>
     </template> 
   </div>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
