--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css" />
+  <!-- <link rel="stylesheet" href="./pages/index.css" /> -->
 </head>
 
 <body class="page">
@@ -98,13 +98,16 @@
         <img src="#" alt="#" class="elements__image" />
         <div class="elements__box">
           <h2 class="elements__caption"></h2>
-          <button class="elements__button-like" type="button" aria-label="Мне нравится"></button>
+          <div class="elements__like-box">
+            <button class="elements__button-like" type="button" aria-label="Мне нравится"></button>
+            <p class="elements__number">10</p>
+          </div>
         </div>
         <button class="elements__button-delete" type="button" aria-label="Удалить"></button>
       </div>
     </template> 
   </div>
-  <script type="module" src="./scripts/index.js"></script>
+  <!-- <script type="module" src="./pages/index.js"></script> -->
 </body>
 
 </html>
