--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,14 @@
   <div class="page__container">
     <header class="header page__header">
       <a href="#" class="header__link" target="_blank" rel="noopener">
-        <img src="<%=require('./images/header-logo.svg')%>" alt="Логотип Mesto" class="header__logo" />
+        <!-- <img src="<%=require('./images/header-logo.svg')%>" alt="Логотип Mesto" class="header__logo" /> -->
+        <img src="./images/header-logo.svg" alt="Логотип Mesto" class="header__logo" />
       </a>
     </header>
     <main class="content page__content">
       <section class="profile content__profile">
-        <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__avatar" />
+        <!-- <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__avatar" /> -->
+        <img src="./images/avatar.jpg" alt="Аватар" class="profile__avatar" />
         <div class="profile__info">
           <div class="profile__text">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
