--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
         <img src="./images/avatar.jpg" alt="Аватар" class="profile__avatar" />
         <div class="profile__info">
           <div class="profile__text">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <p class="profile__about">Исследователь океана</p>
+            <h1 class="profile__name"></h1>
+            <p class="profile__about"></p>
           </div>
           <button class="profile__button profile__button_edit" type="button" aria-label="Редактировать"></button>
         </div>
@@ -39,7 +39,7 @@
       <form class="popup popup_type_form popup_do_edit" name="form-edit" novalidate>
         <h2 class="popup__heading">Редактировать профиль</h2>
         <fieldset class="popup__input-container">
-          <input type="text" class="popup__input popup__input_el_name" id="name-input" name="myname" placeholder="Ваше имя"
+          <input type="text" class="popup__input popup__input_el_name" id="name-input" name="name" placeholder="Ваше имя"
             value="" minlength="2" maxlength="40" required>
           <span class="name-input-error popup__input-error"></span>
           <input type="text" class="popup__input popup__input_el_about" id="about-input" name="about"
@@ -102,7 +102,7 @@
           <h2 class="elements__caption"></h2>
           <div class="elements__like-box">
             <button class="elements__button-like" type="button" aria-label="Мне нравится"></button>
-            <p class="elements__number">10</p>
+            <p class="elements__number"></p>
           </div>
         </div>
         <button class="elements__button-delete" type="button" aria-label="Удалить"></button>
