--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,14 @@
     </header>
     <main class="content page__content">
       <section class="profile content__profile">
-        <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__avatar" />
+        <div class="profile__avatar-container">
+          <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__avatar" />
+          <div class="profile__avatar-edit"></div>
+        </div>
         <div class="profile__info">
           <div class="profile__text">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <p class="profile__about">Исследователь океана</p>
+            <h1 class="profile__name"></h1>
+            <p class="profile__about"></p>
           </div>
           <button class="profile__button profile__button_edit" type="button" aria-label="Редактировать"></button>
         </div>
@@ -36,7 +39,7 @@
       <form class="popup popup_type_form popup_do_edit" name="form-edit" novalidate>
         <h2 class="popup__heading">Редактировать профиль</h2>
         <fieldset class="popup__input-container">
-          <input type="text" class="popup__input popup__input_el_name" id="name-input" name="myname" placeholder="Ваше имя"
+          <input type="text" class="popup__input popup__input_el_name" id="name-input" name="name" placeholder="Ваше имя"
             value="" minlength="2" maxlength="40" required>
           <span class="name-input-error popup__input-error"></span>
           <input type="text" class="popup__input popup__input_el_about" id="about-input" name="about"
@@ -71,14 +74,38 @@
         <button class="popup__button popup__button_close" type="button" aria-label="Закрыть"></button>
       </div>
     </article>
+    <article class="overlay page__overlay page__overlay_type_delete">
+      <form class="popup popup_type_form popup_do_delete" name="form-delete" novalidate>
+        <h2 class="popup__heading">Вы уверены?</h2>
+        <fieldset class="popup__input-container">
+          <button type="submit" class="popup__submit" aria-label="Удалить">Да</button>
+        </fieldset>
+        <button class="popup__button popup__button_close" type="button" aria-label="Закрыть"></button>
+      </form>
+    </article>
+    <article class="overlay page__overlay page__overlay_type_avatar">
+      <form class="popup popup_type_form popup_do_avatar" name="form-avatar" novalidate>
+        <h2 class="popup__heading">Обновить аватар</h2>
+        <fieldset class="popup__input-container">
+          <input type="url" class="popup__input popup__input_el_image popup__input_el_image-avatar" id="avatar-input" name="link"
+            placeholder="Ссылка на картинку" value="" required>
+          <span class="avatar-input-error popup__input-error"></span>
+          <button type="submit" class="popup__submit" aria-label="Создать">Сохранить</button>
+        </fieldset>
+        <button class="popup__button popup__button_close" type="button" aria-label="Закрыть"></button>
+      </form>
+    </article>
     <template class="template">
       <div class="elements__item">
         <img src="#" alt="#" class="elements__image" />
         <div class="elements__box">
           <h2 class="elements__caption"></h2>
-          <button class="elements__button-like" type="button" aria-label="Мне нравится"></button>
+          <div class="elements__like-box">
+            <button class="elements__button-like" type="button" aria-label="Мне нравится"></button>
+            <p class="elements__number"></p>
+          </div>
         </div>
-        <button class="elements__button-delete" type="button" aria-label="Удалить"></button>
+        <button class="elements__button-delete elements__button-delete_hidden" type="button" aria-label="Удалить"></button>
       </div>
     </template> 
   </div>
